[package]
name ="concprog"
version="0.1.0"
edition="2021"

[[bin]]
name="intro"
path="src/intro.rs"

[[bin]]
name="scoped"
path="src/scoped.rs"

[[bin]]
name="sharedown"
path="src/sharedown.rs"

[[bin]]
name="interiormut"
path="src/interiormut.rs"

[[bin]]
name="mutexes"
path="src/mutexes.rs"

[[bin]]
name="waitpark"
path="src/waitpark.rs"

[[bin]]
name="condvar"
path="src/condvar.rs"

[[bin]]
name="main"
path="src/main.rs"

[[bin]]
name="atomics"
path="src/atomics.rs"

[[bin]]
name="preporting"
path="src/preporting.rs"

[[bin]]
name="synchronization"
path="src/synchronization.rs"

[[bin]]
name="lazy"
path="src/lazy.rs"

[[bin]]
name="threadpool"
path="src/threadpool.rs"

[[bin]]
name="prmultithread"
path="src/prmultithread.rs"

[[bin]]
name="statistics"
path="src/statistics.rs"

[[bin]]
name="idallocation"
path="src/idallocation.rs"

[[bin]]
name="compexop"
path="src/compexop.rs"

[[bin]]
name="channels"
path="src/channels.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
